Fix horizontal scrolling on mobile

--- a/_/css/components/_global.scss
+++ b/_/css/components/_global.scss
@@ -8,6 +8,8 @@ body {
   padding: 30px 0;
   font-family: $bodyFont;
   font-size: .95em;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 footer {
@@ -86,7 +88,7 @@ blockquote {
 
 .about-section {
   padding-bottom: 15px;
-  padding-top: 25px;
+  padding-top: 55px;
   text-align: center;
   clear: both;
 }
@@ -151,6 +153,11 @@ blockquote {
   .section-content {
     min-height: 600px;
   }
+}
+
+// fix horizontal scrolling on mobile
+.touch {
+  overflow-x: hidden !important;
 }
 
 @media screen and (min-width: $breakpoint-medium) {
